--- a/playbooks/openshift-apps/solr.yml
+++ b/playbooks/openshift-apps/solr.yml
@@ -35,9 +35,21 @@
     file: service.yml
     objectname: service.yml
 
-  - command: "oc adm pod-network join-projects --to=solr fedora-packages-static"
-
   - role: openshift/object
     app: solr
     file: deploymentconfig.yml
     objectname: deploymentconfig.yml
+
+- name: Link solr and fedora-packages-static networks
+  hosts: os_masters_stg[0]
+  user: root
+  gather_facts: False
+
+  vars_files:
+    - /srv/web/infra/ansible/vars/global.yml
+    - "/srv/private/ansible/vars.yml"
+    - /srv/web/infra/ansible/vars/{{ ansible_distribution }}.yml
+
+  tasks:
+  - name: Run oc adm command to link solr to other projects
+    command: "oc adm pod-network join-projects --to=solr fedora-packages-static"
