--- a/playbooks/groups/secondary.yml
+++ b/playbooks/groups/secondary.yml
@@ -22,7 +22,7 @@
   - sudo
   - { role: nfs/client,
       mnt_dir: '/srv/pub/archive',
-      nfs_src_dir: 'fedora_ftp/fedora.redhat.com/pub/archive' }
+      nfs_src_dir: 'fedora_ftp_archive' }
   - { role: nfs/client,
       mnt_dir: '/srv/pub/alt',
       nfs_mount_opts: "rw,hard,bg,intr,noatime,nodev,nosuid,sec=sys,nfsvers=3",
