--- a/playbooks/openshift-apps/languages.yml
+++ b/playbooks/openshift-apps/languages.yml
@@ -71,28 +71,28 @@
 
   post_tasks:
   - name: run initial f.10 import
-    command: "oc create job stats-10-{{ lookup('pipe','date +%s') }}-init --from=cronjob/stats-10"
+    command: "oc -n languages create job stats-10-{{ lookup('pipe','date +%s') }}-init --from=cronjob/stats-10"
     tags:
     - never
     - init
     - f10
  
   - name: run initial f.20 import
-    command: "oc create job stats-20-{{ lookup('pipe','date +%s') }}-init --from=cronjob/stats-20"
+    command: "oc -n languages create job stats-20-{{ lookup('pipe','date +%s') }}-init --from=cronjob/stats-20"
     tags:
     - never
     - init
     - f20
 
   - name: run initial f.30 import
-    command: "oc create job stats-30-{{ lookup('pipe','date +%s') }}-init --from=cronjob/stats-30"
+    command: "oc -n languages create job stats-30-{{ lookup('pipe','date +%s') }}-init --from=cronjob/stats-30"
     tags:
     - never
     - init
     - f30
 
   - name: run initial f.latest import
-    command: "oc create job stats-latest-{{ lookup('pipe','date +%s') }}-init --from=cronjob/stats-latest"
+    command: "oc -n languages create job stats-latest-{{ lookup('pipe','date +%s') }}-init --from=cronjob/stats-latest"
     tags:
     - never
     - init
