--- a/playbooks/groups/vmhost_copr.yml
+++ b/playbooks/groups/vmhost_copr.yml
@@ -32,6 +32,7 @@
 
   tasks:
   - import_tasks: "{{ tasks_path }}/motd.yml"
+  - import_tasks: "{{ tasks_path }}/2fa_client.yml"
 
   handlers:
   - import_tasks: "{{ handlers_path }}/restart_services.yml"
