--- a/playbooks/groups/bodhi-backend.yml
+++ b/playbooks/groups/bodhi-backend.yml
@@ -68,6 +68,10 @@
     mnt_dir: '/pub/'
     nfs_src_dir: 'fedora_ftp/fedora.redhat.com/pub/'
 
+  - role: nfs/client
+    mnt_dir: '/pub/archive'
+    nfs_src_dir: 'fedora_ftp_archive'
+
   - role: keytab/service
     owner_user: apache
     owner_group: apache
