toddlers: ignore the cockpit account as we do for a couple of others
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/openshift-apps/toddlers/templates/fedora-messaging.toml
+++ b/roles/openshift-apps/toddlers/templates/fedora-messaging.toml
@@ -91,7 +91,7 @@ dist_git_token = "private random string to change"
 email_overrides_file = "/etc/fedora-messaging/email_overrides.toml"
 
 # List of accounts we do not want to report about
-ignorable_accounts = ["packagerbot", "zuul"]
+ignorable_accounts = ["packagerbot", "zuul", "cockpit"]
 
 # Temp folder to use for toddlers temp files
 temp_folder = "/var/tmp"
