copr: workaround memory leak
/api_3/package/list/ is leaking a memory. Even after two days of investigation, I did not find why.
Just recycle it more frequent to avoid oomkiller.

--- a/roles/copr/frontend-cloud/templates/httpd/coprs.conf
+++ b/roles/copr/frontend-cloud/templates/httpd/coprs.conf
@@ -4,6 +4,7 @@ Alias "/db_dumps/" "/var/www/html/db_dumps/"
 
 WSGIDaemonProcess 127.0.0.1 user=copr-fe group=copr-fe processes=4 threads=5 display-name=other maximum-requests=8000 restart-interval=300 graceful-timeout=20
 WSGIDaemonProcess api user=copr-fe group=copr-fe processes=2 threads=15 display-name=api maximum-requests=8000 graceful-timeout=20
+WSGIDaemonProcess api-memory-leak user=copr-fe group=copr-fe processes=2 threads=1 display-name=api-memory-leak maximum-requests=10 graceful-timeout=20
 WSGIDaemonProcess backend user=copr-fe group=copr-fe processes=2 threads=15 display-name=backend maximum-requests=8000 graceful-timeout=20
 WSGIDaemonProcess stats user=copr-fe group=copr-fe processes=2 threads=15 display-name=stats maximum-requests=8000 graceful-timeout=20
 WSGIDaemonProcess tmp user=copr-fe group=copr-fe processes=2 threads=15 display-name=tmp maximum-requests=8000 graceful-timeout=20
@@ -70,6 +71,9 @@ WSGIApplicationGroup %{GLOBAL}
     </LocationMatch>
     <LocationMatch "^/api.*upload.*">
         WSGIProcessGroup upload
+    </LocationMatch>
+    <LocationMatch "^/api_3/package/list.**">
+        WSGIProcessGroup api-memory-leak
     </LocationMatch>
     <LocationMatch "^/coprs.*new_build_upload.*">
         WSGIProcessGroup upload
