--- a/roles/copr/frontend-cloud/templates/httpd/coprs.conf
+++ b/roles/copr/frontend-cloud/templates/httpd/coprs.conf
@@ -72,7 +72,7 @@ WSGIApplicationGroup %{GLOBAL}
     <LocationMatch "^/api.*upload.*">
         WSGIProcessGroup upload
     </LocationMatch>
-    <LocationMatch "^/api_3/package/list.**">
+    <LocationMatch "^/api_3/package/list.*">
         WSGIProcessGroup api-memory-leak
     </LocationMatch>
     <LocationMatch "^/coprs.*new_build_upload.*">
