fasjson: Add custom email alias `bt0` for FAS @bt0dotninja
This commit creates a custom email address, `bt0@fp.o` to redirect to
@bt0dotninja's FAS email address. As folks who work with Alberto know,
his IRC/Matrix nick is `bt0` and frequently in chats and mailing lists,
his short-hand version of his name is used. So, as @nb did for me
previously with aliasing `jwf@fp.o` to @jflory7, I am doing the same for
@bt0dotninja.

Signed-off-by: Justin W. Flory (he/him) [Fedora Project] <jwf@fedoraproject.org>

--- a/roles/fas_client/files/aliases.template
+++ b/roles/fas_client/files/aliases.template
@@ -141,7 +141,7 @@ cvs-sysadmin: fedora-sysadmin-list@redhat.com
 
 # this email address no longer exists internally (2020-06?) and is
 # causing large amounts of bouncebacks and weighing email down from
-# our servers in the RH scanners. 
+# our servers in the RH scanners.
 legal-cla-archive: /dev/null
 
 vendors: distribution-members
@@ -255,6 +255,7 @@ rbergeron: rbergero
 jwf: jflory7
 axk4545: abkahrs
 bexelbie: bex
+bt0dotninja: bt0
 
 # Mirror admin alias
 mirror-admin: mirror-admin@lists.fedoraproject.org
