jwf's patch swapped the order of the alias - it should read bt0: bt0dotninja

--- a/roles/fas_client/files/aliases.template
+++ b/roles/fas_client/files/aliases.template
@@ -255,7 +255,7 @@ rbergeron: rbergero
 jwf: jflory7
 axk4545: abkahrs
 bexelbie: bex
-bt0dotninja: bt0
+bt0: bt0dotninja
 
 # Mirror admin alias
 mirror-admin: mirror-admin@lists.fedoraproject.org
