--- a/playbooks/groups/copr-hypervisor.yml
+++ b/playbooks/groups/copr-hypervisor.yml
@@ -18,6 +18,7 @@
     - import_role: name=nagios_client
     - import_role: name=openvpn/client
     - import_role: name=ipa/client
+    - import_role: name=copr/hypervisor
 
     - import_tasks: "{{ tasks_path }}/motd.yml"
 
