openshift: allow appowner to start a rollout

--- a/roles/openshift/project/templates/role-appowners.yml
+++ b/roles/openshift/project/templates/role-appowners.yml
@@ -146,3 +146,10 @@ rules:
   - get
   - list
   - watch
+- apiGroups:
+  - apps.openshift.io
+  attributeRestrictions: null
+  resources:
+  - deploymentconfigs/instantiate
+  verbs:
+  - create
