--- a/roles/ipa/server/tasks/main.yml
+++ b/roles/ipa/server/tasks/main.yml
@@ -1,7 +1,19 @@
 ---
 # Configuration for IPA
-# TODO: consider switching to https://github.com/freeipa/ansible-freeipa
+#
+# TODO: remove staging tag afetr freeze
+- name: on rhel8 hosts enable the correct idm module
+  copy:
+    dest: /etc/dnf/modules.d/idm.module
+    content: |
+      [idm]
+      name=idm
+      stream=DL1
+      profiles=
+      state=enabled
+  when: ansible_distribution_major_version|int >= 8 and ansible_distribution == 'RedHat' and env == 'staging'
 
+# TODO: consider switching to https://github.com/freeipa/ansible-freeipa
 - name: install needed packages
   package: name={{ item }} state=present
   with_items:
