copr-hv: re-create socket file on libvirtd.socket change

--- a/handlers/restart_services.yml
+++ b/handlers/restart_services.yml
@@ -53,6 +53,10 @@
 - name: restart libvirtd
   action: service name=libvirtd state=restarted
 
+- name: restart libvirtd.socket
+  action: service name=libvirtd.socket state=stopped
+  notify: restart libvirtd
+
 - name: restart mailman
   action: service name=mailman state=restarted
 
