copr-hv: allow @sysadmin-copr to ssh as 'copr', not root

--- a/roles/copr/hypervisor/tasks/main.yml
+++ b/roles/copr/hypervisor/tasks/main.yml
@@ -88,6 +88,12 @@
   with_file:
   - buildsys.pub
 
+- name: add root keys for sysadmin-main and other allowed users
+  action: authorized_key user=copr key={{ item }}
+  with_lines:
+  - "{{ auth_keys_from_fas}} @sysadmin-copr"
+  tags: copr_admins
+
 # todo: generate it's own key
 - name: make sure hostA can ssh to hostB
   copy:
