koschei: Disable tracking of neuro-sig group (#9664)

--- a/roles/openshift-apps/koschei/vars/production.yml
+++ b/roles/openshift-apps/koschei/vars/production.yml
@@ -45,9 +45,10 @@ koschei_cron_jobs:
   - name: refresh-scitech
     schedule: "11 0-23/3 * * *"
     command: "koschei-refresh-distgit-group scitech_sig scitech_sig"
-  - name: refresh-neuro
-    schedule: "13 0-23/3 * * *"
-    command: "koschei-refresh-distgit-group neuro-sig neuro-sig"
+# neuro-sig tracking is temporairly disabled, see #9664
+#  - name: refresh-neuro
+#    schedule: "13 0-23/3 * * *"
+#    command: "koschei-refresh-distgit-group neuro-sig neuro-sig"
   - name: track-rust
     schedule: "15 0-23/3 * * *"
     command: "koschei-track-group rust-sig"
@@ -60,9 +61,10 @@ koschei_cron_jobs:
   - name: track-scitech
     schedule: "21 0-23/3 * * *"
     command: "koschei-track-group scitech_sig"
-  - name: track-neuro
-    schedule: "23 0-23/3 * * *"
-    command: "koschei-track-group neuro-sig"
+# neuro-sig tracking is temporairly disabled, see #9664
+#  - name: track-neuro
+#    schedule: "23 0-23/3 * * *"
+#    command: "koschei-track-group neuro-sig"
   - name: refresh-python
     schedule: "25 0-23/3 * * *"
     command: "koschei-refresh-distgit-group koschei/auto-group-python-sig python-sig"
