Revert "Revert "Revert "Disable prerelease redirects"""
This reverts commit 0b74b995d149a9ffb877174c9de64bcdcab89c2a.

--- a/playbooks/include/proxies-redirects.yml
+++ b/playbooks/include/proxies-redirects.yml
@@ -328,7 +328,7 @@
     website: labs.fedoraproject.org
     regex: /(.*)prerelease.*$
     target: https://labs.stg.fedoraproject.org/$1
-    redirectmatch_enabled: false
+    redirectmatch_enabled: true
     when: env == 'staging'
 
   - role: httpd/redirectmatch
@@ -336,7 +336,7 @@
     website: spins.fedoraproject.org
     regex: /(.*)prerelease.*$
     target: https://spins.stg.fedoraproject.org/$1
-    redirectmatch_enabled: false
+    redirectmatch_enabled: true
     when: env == 'staging'
 
   - role: httpd/redirectmatch
@@ -344,7 +344,7 @@
     website: arm.fedoraproject.org
     regex: /(.*)prerelease.*$
     target: https://arm.stg.fedoraproject.org/$1
-    redirectmatch_enabled: false
+    redirectmatch_enabled: true
     when: env == 'staging'
 
   - role: httpd/redirectmatch
@@ -352,7 +352,7 @@
     website: labs.fedoraproject.org
     regex: /prerelease.*$
     target: https://labs.stg.fedoraproject.org/$1
-    redirectmatch_enabled: false
+    redirectmatch_enabled: true
     when: env == 'staging'
 
   - role: httpd/redirectmatch
@@ -360,7 +360,7 @@
     website: spins.fedoraproject.org
     regex: /prerelease.*$
     target: https://spins.stg.fedoraproject.org/$1
-    redirectmatch_enabled: false
+    redirectmatch_enabled: true
     when: env == 'staging'
 
   - role: httpd/redirectmatch
@@ -368,7 +368,7 @@
     website: arm.fedoraproject.org
     regex: /prerelease.*$
     target: https://arm.stg.fedoraproject.org/$1
-    redirectmatch_enabled: false
+    redirectmatch_enabled: true
     when: env == 'staging'
 
   - role: httpd/redirectmatch
@@ -402,7 +402,7 @@
     website: labs.fedoraproject.org
     regex: /(.*)/prerelease.*$
     target: https://labs.fedoraproject.org/$1
-    redirectmatch_enabled: false
+    redirectmatch_enabled: true
     when: env != 'staging'
 
   - role: httpd/redirectmatch
@@ -410,7 +410,7 @@
     website: spins.fedoraproject.org
     regex: /(.*)/prerelease.*$
     target: https://spins.fedoraproject.org/$1
-    redirectmatch_enabled: false
+    redirectmatch_enabled: true
     when: env != 'staging'
 
   - role: httpd/redirectmatch
@@ -418,7 +418,7 @@
     website: arm.fedoraproject.org
     regex: /(.*)/prerelease.*$
     target: https://arm.fedoraproject.org/$1
-    redirectmatch_enabled: false
+    redirectmatch_enabled: true
     when: env != 'staging'
 
   - role: httpd/redirectmatch
@@ -426,7 +426,7 @@
     website: labs.fedoraproject.org
     regex: /prerelease.*$
     target: https://labs.fedoraproject.org/$1
-    redirectmatch_enabled: false
+    redirectmatch_enabled: true
     when: env != 'staging'
 
   - role: httpd/redirectmatch
@@ -434,7 +434,7 @@
     website: spins.fedoraproject.org
     regex: /prerelease.*$
     target: https://spins.fedoraproject.org/$1
-    redirectmatch_enabled: false
+    redirectmatch_enabled: true
     when: env != 'staging'
 
   - role: httpd/redirectmatch
@@ -442,7 +442,7 @@
     website: arm.fedoraproject.org
     regex: /prerelease.*$
     target: https://arm.fedoraproject.org/$1
-    redirectmatch_enabled: false
+    redirectmatch_enabled: true
     when: env != 'staging'
 
   - role: httpd/redirectmatch
@@ -450,7 +450,7 @@
     website: alt.fedoraproject.org
     regex: /prerelease.*$
     target: https://alt.fedoraproject.org/$1
-    redirectmatch_enabled: false
+    redirectmatch_enabled: true
     when: env != 'staging'
 
 # end of prod prerelease
