copr-keygen: move handlers to a global place
This used to be a role-specific handler, though we have a special
upgrade playbooks (e.g. copr-keygen-upgrade.yml) that failed because
they use but don't import the copr/* roles (and role handlers).  So we
would have to either import role-specific handlers explicitly, or do
this commit.

--- a/handlers/restart_services.yml
+++ b/handlers/restart_services.yml
@@ -200,3 +200,9 @@
   systemd:
     name: kojira
     state: restarted
+
+- name: restart haveged
+  service: name=haveged state=restarted
+
+- name: restart obs-signd
+  service: name=signd state=restarted
