Email aliases: Swap diversity@fp.o from @jflory7 to @siddharthvipul1
This commit swaps the recipients of the diversity@fp.o email address
from @jflory7, the outgoing D&I Advisor, with @siddharthvipul1, the
incoming D&I Advisor for Fedora 34.

I believe that `roles/fasjson` is current and `roles/fas_client` is
retired from FAS2, but I could not find confirmation that it is retired
or deprecated. So, I updated both roles.

CC: @riecatnor @mattdm, who are also included as recipients to this
email address alias.

CC: @lilyx @ramyaparimi @t0xic0der @mouse, sharing as a "For Your
Information". Did you know we have a diversity@fp.o mail alias? Now you
do. :wink:

Signed-off-by: Justin W. Flory (he/him) [Fedora Project] <jwf@fedoraproject.org>

--- a/roles/fas_client/files/aliases.template
+++ b/roles/fas_client/files/aliases.template
@@ -169,9 +169,9 @@ codeofconduct: fpl,fcaic
 fpgm: bcotton
 program-manager: fpgm
 
-## Fedora Diversity Advisor
+## Fedora Diversity & Inclusion Advisor
 ## https://docs.fedoraproject.org/en-US/council/diversity-advisor/
-diversity: fpl,fcaic,jflory7
+diversity: fpl,fcaic,siddharthvipul1
 diversity-inclusion: diversity
 
 # FESCo
