--- a/roles/copr/base/tasks/main.yml
+++ b/roles/copr/base/tasks/main.yml
@@ -40,7 +40,7 @@
   lineinfile: dest=/etc/anacrontab
               backup=yes
               state=present
-              line='MAILTO=praiskup@redhat.com'
+              line='MAILTO=praiskup@fedoraproject.org'
               regexp="^MAILTO"
   notify: restart crond
 
