distgit/pagure: Specify the url to oraculum in the config
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/roles/distgit/pagure/templates/pagure_shared.cfg
+++ b/roles/distgit/pagure/templates/pagure_shared.cfg
@@ -93,6 +93,7 @@ PDC_BRANCH_OVERRIDES = {"rpms": {"refs/heads/main": "refs/heads/rawhide"}}
 ALLOW_HTTP_PUSH = True
 
 PDC_URL = 'https://pdc{{ env_suffix }}.fedoraproject.org/rest_api/v1/'
+ORACULUM_URL = "https://packager-dashboard{{ env_suffix }}.fedoraproject.org/api/"
 
 SSH_KEYS_OPTIONS = 'restrict,command="/usr/libexec/pagure/aclchecker.py %(username)s"'
 
