copr-hv: correctly put copr user to qemu group
... to have access to /libvirt-images directory.

--- a/roles/copr/hypervisor/tasks/main.yml
+++ b/roles/copr/hypervisor/tasks/main.yml
@@ -107,7 +107,7 @@
   tags: libvirtd
 
 - name: create the copr user
-  user: name=copr uid=11666 group=libvirt groups=["qemu"] password_lock=true
+  user: name=copr uid=11666 group=libvirt groups=qemu password_lock=true
 
 - name: assure that copr-be can ssh there as copr@...
   authorized_key: user=copr key="{{ item }}"
