copr-hv: images in /libvirt-images to have qemu-group
And really allow qemu group to rwx that dir.

--- a/roles/copr/hypervisor/tasks/main.yml
+++ b/roles/copr/hypervisor/tasks/main.yml
@@ -28,7 +28,7 @@
 
 - name: create libvirt image directory
   file: path={{ image_pool_dir }}
-        owner=qemu group=qemu mode=0700
+        owner=qemu group=qemu mode=ug=rwx,g+s
         state=directory
   tags: libvirtd
 
